[package]
name = "seher-cr"
version = "0.1.1"
edition = "2024"
description = "A wrapper for the CodeRabbit CLI that automatically retries on rate limit errors"
license = "MIT"

[dependencies]
tokio = { version = "1.50.0", features = ["rt", "macros", "process", "time"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[package.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "homebrew"]
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "aarch64-pc-windows-msvc"]
publish-jobs = ["homebrew"]
install-path = "CARGO_HOME"
tap = "smartcrabai/homebrew-tap"

[[bin]]
name = "scr"
path = "src/main.rs"
