[package]
description = "A wrapper for the CodeRabbit CLI that automatically retries on rate limit errors"
edition = "2024"
license = "MIT"
name = "seher-cr"
repository = "https://github.com/smartcrabai/seher-cr"
version = "0.1.2"

[dependencies]
tokio = { version = "1.50.0", features = ["rt", "macros", "process", "time"] }

[profile.release]
codegen-units = 1
lto = true
strip = true

[package.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
install-path = "CARGO_HOME"
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "smartcrabai/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]

[[bin]]
name = "scr"
path = "src/main.rs"

[lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
